concordium-std/tests/state/map-multiple-state-ref-mut.stderr
error[E0499]: cannot borrow `map` as mutable more than once at a time
  --> tests/state/map-multiple-state-ref-mut.rs:14:14
   |
13 |     let e1 = map.get_mut(&0u8).unwrap();
   |              --- first mutable borrow occurs here
14 |     let e2 = map.get_mut(&1u8).unwrap();
   |              ^^^ second mutable borrow occurs here
15 |     // Use them, so we are certain that their lifetimes overlap.
16 |     assert_eq!(*e1, *e2);
   |                 -- first borrow later used here
